# mini_commander_console

./: .gitgnore  .gitignore  CMakeLists.txt  DOCUMENTATION_CODE.txt  README.md  main.cpp
help_cpp/: helper_text.cpp
help_header/: helper_open_file.h  helper_text.h
help_header/console/: helper_clear_console.h
helper_cpp/: helper_text.cpp
helper_cpp/console/: color_console.cpp  debug_some_command.cpp  helper_clear_console.cpp
helper_cpp/helper_for_find_folder_file/: helper_for_find_FF.cpp
helper_cpp/open_files/: helper_open_file.cpp
helper_cpp/work_with_files/: for_time.cpp  helper_create_file.cpp  helper_delete_file.cpp  helper_open_file.cpp
helper_cpp/work_with_txt/: helper_txt.cpp
helper_header/: helper_open_file.h  helper_text.h
helper_header/console/: color_console.h  debug_some_command.h  helper_clear_console.h
helper_header/helper_for_find_folder_file/: helper_for_find_FF.h
helper_header/open_files/: helper_open_file.h
helper_header/work_with_files/: for_time.h  helper_create_file.h  helper_delete_file.h  helper_open_file.h  include_for_work_with_files.h
helper_header/work_with_txt/: helper_txt.h
